--- a/HalloAppClip/de.lproj/Localizable.strings
+++ b/HalloAppClip/de.lproj/Localizable.strings
@@ -59,7 +59,7 @@
 "registration.invalidphone" = "Ups!";
 
 /* Popup that appears when user tries to register invalid number */
-"registration.invalidphone.only" = "Die von dir eingegebene Handynummer ist ungültig. Bitte überprüfe die Nummer noch einmal.";
+"registration.invalidphone.only" = "Die eingegebene Handynummer ist ungültig. Bitte prüfe die Nummer und versuche es noch einmal.";
 
 /* Popup that appears when user tries to register uninvited number */
 "registration.invite.only" = "Wenn du einem Gruppeneinladungslink gefolgt bist, um dich zu registrieren, klicke bitte erneut auf den Link, um die Registrierung abzuschließen und der Gruppe beizutreten.";
